# dockerized_etl

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  servers.json
dags/: data_quality.py  etl.py  extract.py  health_check_dag.py  load.py  transform.py
init-scripts/: 01-init-db.sql
notebooks/: flight_data_analysis.ipynb
plugins/: great_expectations_utils.py
scripts/: entrypoint.sh  lint.sh
